...
				{isBlurred && (
					<>
						<BlurView style={styles.blurOverlay} tintEnabled={true} />

						<TouchableHighlight
							style={styles.revealButton}
							testID="RecoveryPhraseRevealButton"
							onPress={handleConfirmBackup}
						>
							<TextSmB
								style={styles.tapToRevealText}
								numberOfLines={1}
								adjustsFontSizeToFit
...
			<View style={[styles.buttonContainer, smallScreen && styles.smallScreenButtonContainer]}>
				<Button
					text={t('backup.finishBackup')}
					variant="secondary"
					size="large"
					disabled={isBlurred}
					testID="RecoveryPhraseFinishButton"
					onPress={handleFinishBackup}
				/>
			</View>
		</SheetScreen>
	);
};
...
