...
					onPress={onEncryptedFilePress}
				/>
				<Button
					text={t('backup.recoveryPhrase')}
					size="large"
					variant="secondary"
					testID="BackupRecoveryPhraseButton"
					onPress={onRecoveryPhrasePress}
				/>
			</View>
		</SheetScreen>
	);
};
...
