...
					{!pubkyData.sourceApp && (
						<Button
							style={styles.actionButton}
							text={t('backup.backup')}
							variant="dark"
							icon={backupIcon}
							testID="PubkyDetailBackupButton"
							onPress={onBackup}
						/>
					)}
					<Button
						style={styles.actionButton}
						text={t('common.delete')}
...
