...
				<TextXsM testID="EditPubkyNameLabel">{t('editPubkySheet.pubkyNameLabel')}</TextXsM>
				<InputItemComponent
					value={newPubkyName}
					placeholder={t('editPubkySheet.pubkyNamePlaceholder')}
					helperText={nameError}
					autoFocus={true}
					testID="EditPubkyNameInput"
					onChangeText={handleChangeText}
					onSubmitEditing={handleNameSubmit}
				/>

				{!isExternal && isSignupTokenInputVisible && (
					<>
						<TextXsM>{t('editPubkySheet.inviteCodeOptional')}</TextXsM>
						<InputItemComponent
							testID="EditPubkyInviteCodeInput"
							inputRef={signupTokenInputRef}
							value={signupToken}
							onChangeText={handleSignupTokenChange}
							placeholder={t('editPubkySheet.inviteCodePlaceholder')}
							error=""
							autoFocus={false}
...
						/>
					</>
				)}

				{!isExternal && (
					<>
						<TextXsM testID="EditPubkyHomeserverLabel">{t('editPubky.homeserver')}</TextXsM>
						<InputItemComponent
							testID="EditPubkyHomeserverInput"
							value={homeServer}
							onChangeText={setHomeServer}
							placeholder={t('editPubky.homeserver')}
							error=""
...
				<Button
					text={t('common.save')}
					size="large"
					variant="secondary"
					loading={loading}
					disabled={isStoredSignedUp && !haveFieldsChanged}
					testID="EditPubkySaveButton"
					onPress={handleSubmit}
				/>
			</View>
		</Sheet>
	);
};
...
